Recovery tests with crashes with two and three log entries. Note: asserts will be added to automate testing